Fix minor grid layout issue in desktop-1440px

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -9844,7 +9844,7 @@ Responsive Design
 /* Page Content Styles */
 .frm-list-grid-layout {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(308px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(303px, 1fr));
 	grid-auto-rows: max-content;
 	gap: var(--gap-sm);
 }
